# 3DSolarSystemSimulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  clean.bat  tranquhProject3.sln  vcpkg.json
.github/workflows/: ci.yml
GameEngine/: ArrowRotateComponent.cpp  ArrowRotateComponent.h  BoxMeshComponent.cpp  BoxMeshComponent.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ContinuousRotateComponent.cpp  ContinuousRotateComponent.h  CylinderMeshCompnent.cpp  CylinderMeshCompnent.h  CylinderMeshComponent.cpp  DirectionalLightComponent.cpp  Game.cpp  Game.h  GameEngine.h  GameEngine.vcxproj  GameEngine.vcxproj.filters  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  LightComponent.cpp  LightComponent.h  MakeVisableComponent.cpp  MakeVisableComponent.h  MakeVisibleComponent.cpp  MakeVisibleComponent.h  Material.h  MathLibsConstsFuncs.cpp  MathLibsConstsFuncs.h  MeshComponent.cpp  MeshComponent.h  ModelMeshComponent.cpp  ModelMeshComponent.h  MyGame.h  PositionalLightComponent.cpp  PositionalLightComponent.h  ReparentComponent.cpp  (+32 more)
GameEngine/My_object/: Luminaris 3Ds.3DS
GameEngine/My_object/spaceship/: spaceship.mtl
GameEngine/Shaders/: fragmentShader.glsl  perPixelLightingfragmentShader.glsl  vertexShader.glsl
